<?xml version="1.0"?>
<package format="3">
  <name>robotic_chair_nav</name>
  <version>0.0.1</version>
  <description>Navigation and control package for robotic chair with command interface and obstacle avoidance.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Nav2 dependencies -->
  <depend>nav2_msgs</depend>
  <depend>nav2_bringup</depend>

  <!-- Launch dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>